Limit Wizard Tower spawns